[tool.poetry]
name = "twilio"
version = "0.1.0"
description = ""
authors = ["mihailmir"]
readme = "README.md"
packages = [{include = "twilio"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
twilio = "^8.11.1"
fastapi-mail = "^1.4.1"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"
gunicorn = "^21.2.0"
pyyaml = "^6.0.1"
psycopg2-binary = "^2.9.9"
peewee-async = {extras = ["postgresql"], version = "^0.10.0"}
peewee = "^3.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
